added research and professional experience sections

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </section>
             <hr class="m-0" />
             <!-- Education-->
-            <section class="resume-section" id="education">
+            <!-- <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -118,6 +118,27 @@
                         <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
                     </div>
                 </div>
+            </section> -->
+            <section class="resume-section" id="education">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Education</h2>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Indian Institute of Technology, Madras</h3>
+                    <div class="subheading mb-3">Master of Science (M.S.) in Autonomous Driving</div>
+                    <div>CGPA: 8.58</div>
+                    <p>2024 - present</p>
+                </div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Visvesvaraya Technological University</h3>
+                    <div class="subheading mb-3">Bachelor of Engineering (B.E.) in Electronics and Communication</div>
+                    <div>CGPA: 9.31</div>
+                    <p>2017 - 2021</p>
+                </div>
+                </div>
+            </div>
             </section>
             <hr class="m-0" />
             <!-- Skills-->
