added prof experience

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </section>
             <hr class="m-0" />
             <!-- Experience-->
-            <section class="resume-section" id="experience">
+            <!-- <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -95,7 +95,24 @@
                         <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
                     </div>
                 </div>
+            </section> -->
+            <section class="resume-section" id="professional_experience">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Professional Experience</h2>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Software Engineer, PathPartner</h3>
+                    <div class="subheading mb-3">Feb 2023 - Jan 2024</div>
+                    <ul>
+                    <li>Member of KPIT team working on Vehicle on-off road classification and free-space mapping for ADAS perception pipeline.</li>
+                    <li>Developed rule-based algorithm to label traffic vehicle positioning relative to road boundary, executed in 100ms with 97% accuracy.</li>
+                    <li>Focused on efficient road-lane mappings and static and dynamic feature fusion for semantic scenario understanding.</li>
+                    </ul>
+                </div>
+                </div>
+            </div>
             </section>
+
             <hr class="m-0" />
             <!-- Education-->
             <!-- <section class="resume-section" id="education">
