edited professional experience

--- a/index.html
+++ b/index.html
@@ -99,17 +99,35 @@
             <section class="resume-section" id="professional_experience">
             <div class="resume-section-content">
                 <h2 class="mb-5">Professional Experience</h2>
+                <!-- ADAS Experience -->
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="flex-grow-1">
-                    <h3 class="mb-0">Software Engineer, PathPartner</h3>
+                    <h3 class="mb-0">Software Engineer, PathPartner <span style="font-style:italic;">(Member of KPIT)</span></h3>
                     <div class="subheading mb-3">Feb 2023 - Jan 2024</div>
                     <ul>
-                    <li>Member of KPIT team working on Vehicle on-off road classification and free-space mapping for ADAS perception pipeline.</li>
-                    <li>Developed rule-based algorithm to label traffic vehicle positioning relative to road boundary, executed in 100ms with 97% accuracy.</li>
-                    <li>Focused on efficient road-lane mappings and static and dynamic feature fusion for semantic scenario understanding.</li>
+                    <li><b>Vehicle on-off road classification and free-space mapping for ADAS perception pipeline</b></li>
+                    <li>Developed rule-based algorithm to label traffic vehicle positioning relative to road boundary, executed in <b>100ms</b> with <b>97% accuracy</b>.</li>
+                    <li>Focused on efficient road-lane mappings and using static road features to improve overall classification accuracy.</li>
+                    <li>Identifying and mapping free-space boundary around the ego vehicle using its surrounding traffic participants.</li>
+                    <li>Awarded <b>two high customer satisfaction certificates</b> from <b>leading Japanese automotive client</b> for the contributions.</li>
+                    <li><b>Tools:</b> C++, R.O.S</li>    
                     </ul>
                 </div>
                 </div>
+
+                <!-- DSP Firmware Experience -->
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Software Engineer, PathPartner <span style="font-style:italic;">(Member of KPIT)</span></h3>
+                    <div class="subheading mb-3">Oct 2021 - Jan 2023</div>
+                    <ul>
+                        <li><b>Develop, optimize and port image/audio processing algorithms on edge DSPs (TI C66x/C67x, Tensilica HiFi4/HiFi5, CEVA X2; SoC: TDA4x)</b></li>
+                        <li>Used intrinsics and assembly-level techniques (<b>register reuse, instruction pipelining, SIMD/vectorization, loop optimizations</b>) to minimize cycle count and increase throughput.</li>
+                        <li>Focused on loop-level and memory-access optimizations to maximize SIMD utilization.</li>
+                        <li><b>Tools:</b> C, Assembly</li>
+                    </ul>
+                </div>
+            </div>
             </div>
             </section>
 
