added skills section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Experience-->
+            <!-- Professional Experience-->
             <!-- <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
@@ -132,29 +132,55 @@
             </section>
 
             <hr class="m-0" />
-            <!-- Education-->
-            <!-- <section class="resume-section" id="education">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+            <!-- Research Experience -->
+             <!-- <section class="resume-section" id="research_experience">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Research Experience</h2>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Software Engineer, PathPartner <span style="font-style:italic;">(Member of KPIT)</span></h3>
+                    <div class="subheading mb-3">Feb 2023 - Jan 2024</div>
+                    <ul>
+                    <li><b>Vehicle on-off road classification and free-space mapping for ADAS perception pipeline</b></li>
+                    <li>Developed rule-based algorithm to label traffic vehicle positioning relative to road boundary, executed in <b>100ms</b> with <b>97% accuracy</b>.</li>
+                    <li>Focused on efficient road-lane mappings and using static road features to improve overall classification accuracy.</li>
+                    <li>Identifying and mapping free-space boundary around the ego vehicle using its surrounding traffic participants.</li>
+                    <li>Awarded <b>two high customer satisfaction certificates</b> from <b>leading Japanese automotive client</b> for the contributions.</li>
+                    <li><b>Tools:</b> C++, R.O.S</li>    
+                    </ul>
+                </div>
+                </div>
+            </div>
+            </div>
+            </section> -->
+            
+
+            <section class="resume-section" id="research_experience">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Research Experience</h2>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Research Scholar, <span style="font-style:italic;">IIT Madras</span></h3>
+                        <div class="subheading mb-3">Feb 2024 - Nov 2024</div>
+                        <div><b>Supervisors:</b> Dr. Bijo Sebastian (Autonomous Systems Lab), Dr. Lelitha Vanajakshi (Intelligent Transportation Systems Lab)</div>
+                        <ul>
+                            <li><b>Development of perception capabilities for autonomous driving applications.<b></li>
+                            <li>Development of <b>Detect-Classify-Track pipeline</b> for ADAS applications using <b>camera, 3D LiDAR, I.M.U, G.P.S.</b></li>
+                            <li>Performed object detection on 3D LiDAR point clouds using <b>DBSCAN</b> clustering and ground plane segmentation with <b>RANSAC</b>; fused classification with <b>YOLOv8</b> from camera images (via LiDAR–camera calibration).</li>
+                            <li>Tracked vehicles using an <b>EKF</b> and performed data association using <b>Mahalanobis distance</b> and <b>Hungarian algorithm</b>.</li>
+                            <li>Localized the ego-vehicle in OpenStreetMap using <b>G.P.S</b> and <b>I.M.U</b> information.</li>
+                            <li>Classification <b>accuracy of 62%</b> with <b>execution time &lt; 0.5 seconds</b> for the developed perception pipeline.</li>
+                        </ul>
+                        <div><b>Tools:</b> C++, Python, ROS, NumPy, OpenCV</div>
                     </div>
                 </div>
-            </section> -->
+            </div>
+        </section>
+
+
+
+            <hr class="m-0" />
+            <!-- Education-->
             <section class="resume-section" id="education">
             <div class="resume-section-content">
                 <h2 class="mb-5">Education</h2>
@@ -176,47 +202,43 @@
                 </div>
             </div>
             </section>
+
+
             <hr class="m-0" />
             <!-- Skills-->
             <section class="resume-section" id="skills">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                    </ul>
-                    <div class="subheading mb-3">Workflow</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
-                        </li>
-                    </ul>
+            <div class="resume-section-content">
+                <h2 class="mb-5">Skills</h2>
+                <div class="row">
+                    <!-- Languages & Frameworks -->
+                    <div class="col-md-6">
+                        <div class="subheading mb-3">Languages & Frameworks</div>
+                        <ul class="fa-ul mb-0">
+                            <li><span class="fa-li"><i class="fas fa-code"></i></span><b>C++</b></li>
+                            <li><span class="fa-li"><i class="fab fa-python"></i></span><b>Python</b></li>
+                            <li><span class="fa-li"><i class="fas fa-code"></i></span>C, Assembly</li>
+                            <li><span class="fa-li"><i class="fas fa-cogs"></i></span><b>PyTorch</b>, MATLAB, Simulink, <b>ROS</b></li>
+                        </ul>
+                    </div>
+                    <!-- Libraries & Misc -->
+                    <div class="col-md-6">
+                        <div class="subheading mb-3">Libraries & Tools</div>
+                        <ul class="fa-ul mb-0">
+                            <li><span class="fa-li"><i class="fas fa-cube"></i></span><b>Open3D, PCL (C++), Eigen, NumPy, Pandas, Scikit-learn, OpenCV</b>, Matplotlib, SciPy</li>
+                            <li><span class="fa-li"><i class="fab fa-git"></i></span>Git, Gerrit</li>
+                            <li><span class="fa-li"><i class="fas fa-tools"></i></span>Jenkins, LaTeX, Valgrind, Ubuntu</li>
+                        </ul>
+                    </div>
                 </div>
-            </section>
+                <div class="subheading mt-4 mb-3">Workflow</div>
+                <ul class="fa-ul mb-0">
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span><b>Agile Development & Scrum</b></li>
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span>Cross Functional Teams</li>
+                    <!-- <li><span class="fa-li"><i class="fas fa-check"></i></span>Mobile-First, Responsive Design</li> -->
+                </ul>
+            </div>
+        </section>
+
             <hr class="m-0" />
             <!-- Interests-->
             <section class="resume-section" id="interests">
