added sensor integration part

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                         <div class="subheading mb-3">Feb 2024 - Nov 2024</div>
                         <div><b>Supervisors:</b> Dr. Bijo Sebastian (Autonomous Systems Lab), Dr. Lelitha Vanajakshi (Intelligent Transportation Systems Lab)</div>
                         <ul>
+                            <li>Performed sensor integration and registration; collected time-synchronized multimodal data (<strong>camera</strong>, <strong>LiDAR</strong>, <strong>IMU</strong>, <strong>GPS</strong>) for algorithm evaluation.</li>
                             <li><b>Development of perception capabilities for autonomous driving applications.</b></li>
                             <li>Development of <b>Detect-Classify-Track pipeline</b> for ADAS applications using <b>camera, 3D LiDAR, I.M.U, G.P.S.</b></li>
                             <li>Performed object detection on 3D LiDAR point clouds using <b>DBSCAN</b> clustering and ground plane segmentation with <b>RANSAC</b>; fused classification with <b>YOLOv8</b> from camera images (via LiDAR–camera calibration).</li>
