added second project in research experience

--- a/index.html
+++ b/index.html
@@ -214,6 +214,48 @@
                         <b>Tools:</b> C++, Python, ROS, NumPy, OpenCV
                       </div>
                     </div>
+
+                    <!-- Project 2: LiDAR Vehicle Classification -->
+                    <!-- Project 2: LiDAR Vehicle Classification -->
+                    <div style="margin-bottom: 24px;">
+                        <span id="lidar_classification_project" style="
+                            font-size: 1.3rem;
+                            font-style: italic;
+                            font-weight: 700;
+                            color: #283e63;
+                            display: block;
+                            margin-bottom: 4px;">
+                        Fusion of Geometric and Kinematic Features for LiDAR-Based Vehicle Classification
+                        </span>
+                        <span style="font-size: 1rem; color: #253045;">
+                        Role: <b>Research Scholar (M.S.)</b> &nbsp;|&nbsp; Feb 2024 – Nov 2024
+                        </span>
+                        <br>
+                        <span style="font-size: 0.95rem;">
+                        <b>Supervisors:</b> Dr. Bijo Sebastian (Autonomous Systems Lab), Dr. Lelitha Vanajakshi (Intelligent Transportation Systems Lab)
+                        </span>
+                        
+                        <ul style="list-style-type: disc; padding-left: 20px; margin-top: 14px;">
+                        <li>
+                            Developed a LiDAR-only classification framework by fusing geometric and kinematic features to resolve ambiguities in similar-shaped vehicles (e.g. bicycle vs. motorcycle).
+                        </li>
+                        <li>
+                            Trained Random Forest and XGBoost models with feature augmentation, achieving +4% accuracy improvement on similar classes and overall accuracy of 89% on the NuScenes dataset.
+                        </li>
+                        <li>
+                            Classes were carefully curated to emphasize challenging geometric similarities (motorcycle, bicycle, etc.).
+                        </li>
+                        <li>
+                            Ongoing work: extending to deep neural networks for kinematic feature extraction and trajectory prediction conditioned on vehicle type.
+                        </li>
+                        </ul>
+                        <div style="margin-top: 8px;">
+                        <b>Tools:</b> Python, NumPy, Pandas, Scikit-learn, XGBoost, ROS, OpenCV
+                        </div>
+                    </div>
+  
+
+
                   </div>
                 </div>
               </section>
