added worhsop details

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="flex-grow-1">
                     <h3 class="mb-0">Indian Institute of Technology, Madras</h3>
-                    <div class="subheading mb-3">Master of Science (M.S.) in Autonomous Driving</div>
+                    <div class="subheading mb-3">Master of Science (M.S.) in Autonomous Driving - Perception</div>
                     <div>CGPA: 8.58</div>
                     <p>2024 - present</p>
                 </div>
@@ -469,7 +469,7 @@
                 <ul class="fa-ul mb-4">
                     <li>
                     <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                    Best Team Award – High Performance & Customer Satisfaction (x2)
+                    Best Team Award – High Performance & Customer Satisfaction(<b>CSAT</b>)
                     </li>
                     <li>
                     <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
