--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         
             <!-- Education -->
             <div style="font-size: 0.95rem; margin-bottom: 8px; color: #333;">
-                M.S. in Autonomous Driving, <strong>Indian Institute of Technology Madras</strong>
+                M.S. in Autonomous Driving (Perception), <strong>Indian Institute of Technology Madras</strong>
             </div>
         
             <!-- College email -->
