removed social media icons

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         
             <!-- Motivation statement -->
             <p class="lead mb-4" style="font-size: 1rem; color: #444; line-height: 1.6;">
-                Passionate about advancing autonomous driving technologies and consumer electronics that imapact the quality of life of people in a positive way.
+                Passionate about advancing autonomous driving technologies and consumer electronics that impact the quality of life in a positive way.
             </p>
         
             <!-- Education -->
@@ -77,9 +77,9 @@
             <!-- Social icons -->
             <div class="social-icons">
                 <a class="social-icon" href="https://www.linkedin.com/in/munisrinivas/" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                <a class="social-icon" href="https://github.com/yourgithub" title="GitHub"><i class="fab fa-github"></i></a>
+                <!-- <a class="social-icon" href="https://github.com/yourgithub" title="GitHub"><i class="fab fa-github"></i></a>
                 <a class="social-icon" href="https://twitter.com/yourtwitter" title="Twitter"><i class="fab fa-twitter"></i></a>
-                <a class="social-icon" href="https://facebook.com/yourfacebook" title="Facebook"><i class="fab fa-facebook-f"></i></a>
+                <a class="social-icon" href="https://facebook.com/yourfacebook" title="Facebook"><i class="fab fa-facebook-f"></i></a> -->
             </div>
             </div>
         </section>
