feat: added conference details

--- a/index.html
+++ b/index.html
@@ -263,6 +263,11 @@
                     <div style="font-size: 1rem; color: #253045; margin-bottom: 6px;">
                     Role: <b>Research Scholar (M.S.)</b> &nbsp;|&nbsp; Dec 2024 – Apr 2025
                     </div>
+                    
+                    <!-- Conference Accepted Info -->
+                    <div style="font-size: 0.95rem; color: #1a73e8; font-weight: 600; margin-bottom: 12px;">
+                    Accepted for presentation at <b>IEEE International Conference on Smart Technologies for Power, Energy, and Control (STPEC)</b>, December 2025.
+                    </div>
                 
                     <!-- Supervisors -->
                     <div style="font-size: 0.95rem; margin-bottom: 14px;">
