changed the company Tag from Member of KPIT to KPIT

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <!-- ADAS Experience -->
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="flex-grow-1">
-                    <h3 class="mb-0">Software Engineer, PathPartner <span style="font-style:italic;">(Member of KPIT)</span></h3>
+                    <h3 class="mb-0">Software Engineer, PathPartner <span style="font-style:italic;">(KPIT)</span></h3>
                     <div class="subheading mb-3">Feb 2023 - Jan 2024</div>
                     <ul>
                     <li><b>Vehicle on-off road classification and free-space mapping for ADAS perception pipeline</b></li>
@@ -145,7 +145,7 @@
                 <!-- DSP Firmware Experience -->
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="flex-grow-1">
-                    <h3 class="mb-0">Software Engineer, PathPartner <span style="font-style:italic;">(Member of KPIT)</span></h3>
+                    <h3 class="mb-0">Software Engineer, PathPartner <span style="font-style:italic;">(KPIT)</span></h3>
                     <div class="subheading mb-3">Oct 2021 - Jan 2023</div>
                     <ul>
                         <li><b>Develop, optimize and port image/audio processing algorithms on edge DSPs (TI C66x/C67x, Tensilica HiFi4/HiFi5, CEVA X2; SoC: TDA4x)</b></li>
@@ -165,7 +165,7 @@
                 <h2 class="mb-5">Research Experience</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="flex-grow-1">
-                    <h3 class="mb-0">Software Engineer, PathPartner <span style="font-style:italic;">(Member of KPIT)</span></h3>
+                    <h3 class="mb-0">Software Engineer, PathPartner <span style="font-style:italic;">(KPIT)</span></h3>
                     <div class="subheading mb-3">Feb 2023 - Jan 2024</div>
                     <ul>
                     <li><b>Vehicle on-off road classification and free-space mapping for ADAS perception pipeline</b></li>
