fix: updated interests

--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    In my free time, I like watching movies and documentaries. I also enjoy long walks and engaging in discussions with friends. 
+                    In my free time, I like watching movies and documentaries. I also enjoy long walks and cycling. 
                 </div>
             </section>
             <hr class="m-0" />
